# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.866 2010/07/20 14:27:20 mpagano Exp $

*git-sources-2.6.35_rc5-r4 (20 Jul 2010)

  20 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc5-r4.ebuild:
  Version bump

*git-sources-2.6.35_rc5-r3 (19 Jul 2010)

  19 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc5-r3.ebuild:
  Version bump

*git-sources-2.6.35_rc5-r2 (17 Jul 2010)

  17 Jul 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc5-r2.ebuild:
  Version bump

*git-sources-2.6.35_rc5-r1 (15 Jul 2010)
*git-sources-2.6.35_rc5 (15 Jul 2010)

  15 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc5.ebuild, +git-sources-2.6.35_rc5-r1.ebuild:
  Version bumps

*git-sources-2.6.35_rc4-r5 (12 Jul 2010)

  12 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  -git-sources-2.6.35_rc3.ebuild, -git-sources-2.6.35_rc3-r1.ebuild,
  -git-sources-2.6.35_rc3-r2.ebuild, -git-sources-2.6.35_rc3-r3.ebuild,
  -git-sources-2.6.35_rc3-r4.ebuild, -git-sources-2.6.35_rc3-r5.ebuild,
  -git-sources-2.6.35_rc3-r6.ebuild, -git-sources-2.6.35_rc3-r7.ebuild,
  -git-sources-2.6.35_rc3-r8.ebuild, +git-sources-2.6.35_rc4-r5.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.35_rc4-r4 (09 Jul 2010)

  09 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc4-r4.ebuild:
  Version bump

*git-sources-2.6.35_rc4-r3 (08 Jul 2010)

  08 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc4-r3.ebuild:
  Version bump

*git-sources-2.6.35_rc4-r2 (08 Jul 2010)

  08 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc4-r2.ebuild:
  Version bump

*git-sources-2.6.35_rc4-r1 (07 Jul 2010)

  07 Jul 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc4-r1.ebuild:
  Version bump

*git-sources-2.6.35_rc4 (05 Jul 2010)
