@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.866 2010/07/20 14:27:20 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.867 2010/07/21 13:21:07 mpagano Exp $
+
+*git-sources-2.6.35_rc5-r5 (21 Jul 2010)
+
+  21 Jul 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.35_rc5-r5.ebuild:
+  Version bump
 
 *git-sources-2.6.35_rc5-r4 (20 Jul 2010)
 
